--- a/css/style.scss
+++ b/css/style.scss
@@ -43,6 +43,47 @@ header {
   border-radius: 10%;
 }
 
+#close {
+  cursor: pointer;
+  width: 30px;
+  // border: 1px solid $cBlack;
+  // border-radius: 4px;
+  text-align: right;
+  // padding: 12px 0;
+  margin: 16px auto 0;
+}
+
+#mask {
+  background: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  &.hidden {
+    display: none;
+  }
+
+}
+
+#modal {
+  // background: $cwhite;
+  width: 300px;
+  // padding: 20px;
+  // border-radius: 4px;
+  position: absolute;
+  top: 140px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  transition: transform 1.5s;
+  z-index: 2;
+
+  &.hidden {
+    transform: translate(0, -500px);
+  }
+}
 // 極小デバイス（縦向きモバイル, 576px 未満）
 @media (max-width: 575.98px) {
  h1,
