個人設定ページを実装。操作ログの取り方を修正

--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,9 @@ h3 {
   font-size: 10px;
 }
 
-/* header {
-  height: 10px;
-} */
+header {
+  height: 20px;
+}
 
 .required {
   background-color: #BB1850;
