・データ一覧にデータ総数を表示させた ・内容記入欄の高さを3行に変更

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ h3 {
   font-size: 18px;
 }
 
+#data-count {
+  font-size: 0.5em;
+  letter-spacing: 0.1em;
+}
+
 .show_version {
   font-size: 10px;
 }
