--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ header {
   height: 20px;
 }
 
+.contents_list {
+  font-size: 16px;
+}
+
 .required {
   background-color: #BB1850;
   color: #fff;
